NXDOC-2018: Update JAVA_OPTS nuxeo.conf parameter + add JVM settings best practice